fix(ui): fix menu links overlap on small height

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,12 +121,18 @@ body,
                 align-items: flex-end;
                 font-weight: 600;
                 font-size: var(--20-font-size);
+
+                @media screen and (max-height: 450px) {
+                    // display: none;
+                    height: 15%;
+                }
             }
 
             &__link-list {
                 margin-top: 10%;
                 width: 100%;
                 height: 60%;
+
                 grid-column-start: 3;
                 grid-column-end: 4;
                 display: flex;
@@ -135,6 +141,12 @@ body,
                 align-items: center;
                 margin-right: 4%;
                 list-style: none;
+
+                @media screen and (max-height: 450px) {
+                    margin-top: 5%;
+                    height: 85%;
+                    justify-content: space-between;
+                }
 
                 &__element {
                     &__link {
@@ -223,7 +235,7 @@ body,
                 display: flex;
                 justify-content: center;
                 align-items: center;
-            
+
                 span {
                     width: 27px;
                     height: 3px;
@@ -231,13 +243,13 @@ body,
                     background-color: var(--text-color);
                     position: absolute;
                     transform: rotate(45deg);
-            
+
                     &:nth-child(1) {
                         transform: rotate(-45deg);
                     }
                 }
             }
-            
+
         }
     }
 
@@ -286,6 +298,7 @@ body,
 
                 &__theme-toggle-container {
                     margin: 0 3%;
+
                     #theme-toggle {
                         display: none;
                     }
